fixed one jvm issue